adding new test cases

--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -3,16 +3,16 @@ baseURL = https://demo.nopcommerce.com/
 
 
 # Registration -
-email = kasia_danang@poczta.onet.pl
-password = Danang
-email_neg = kasia_negtest@gmail.com
+email = kasia@danang.com
+password = danang
+email_neg = negtest@danang.com
 search_item = Night Visions
 fname_reg = John
 lname_reg = Smith
 dob_day_reg = 23
 dob_month_reg = January
 dob_year_reg = 1980
-company_name_reg = Danang
+company_name_reg = XYZ
 
 
 #compare products - test_008
@@ -23,7 +23,7 @@ compare_prod_item3 = HP Spectre XT Pro UltraBook
 #rating - test_011
 rev_title = Above expectations!
 rev_text = This product is amazing! I love the quality and it's very easy to use. The price is reasonable too. Highly recommend!
-rating = 5
+rating = 4
 
 #wishlist - test_012
 wishlist_to_add = Leica T Mirrorless Digital Camera,
@@ -40,9 +40,9 @@ qty = 5
 fname = John
 lname = Smith
 email_checkout = john@test.com
-country = Poland
-city = Brno
-address1 = Vlhka 20
+country = Portugal
+city = Porto
+address1 = Modra 20
 address2 = 104/3
 zipcode = 60200
 phonenum = +420768333100
@@ -61,9 +61,18 @@ oldpwd = danang
 newpwd = danang123
 confirmpwd = danang1234
 
-# My Account > Downloadable products
-first_dp = kasia
-last_dp = download
-email_dp = kasia@download.com
-password_dp = kasia_download
+# Currency
+ccy = Euro
 
+# Community poll
+poll = Good
+
+# Contact us
+name_contact = Josh Smith
+email_contact = josh.smith@test.com
+enquiry_contact = This is a testing contact
+
+# Recently viewed products
+recently_viewed = First Prize Pies,
+                  Nokia Lumia 1020,
+                  Universal 7-8 Inch Tablet Cover
