test cases update

--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -6,7 +6,7 @@ baseURL = https://demo.nopcommerce.com/
 email = kasia@danang.com
 password = danang
 email_neg = negtest@danang.com
-search_item = Night Visions
+search_item = Nokia Lumia 1020
 fname_reg = John
 lname_reg = Smith
 dob_day_reg = 23
@@ -47,6 +47,7 @@ address2 = 104/3
 zipcode = 60200
 phonenum = +420768333100
 faxnum =
+
 
 # Payment method for credit card method
 cardtype = Master card
